ecmascript/parser/tests/test262-error-references/fail/9cbce7d794e8d679.js.stderr
error: TS1094
 --> $DIR/tests/test262-parser/fail/9cbce7d794e8d679.js:1:11
  |
1 | class A { set prop() {} }
  |           ^^^

error: TS1056
 --> $DIR/tests/test262-parser/fail/9cbce7d794e8d679.js:1:15
  |
1 | class A { set prop() {} }
  |               ^^^^

